--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="textColor">#FFFFFF</color>
     <color name="textColor2">#fdd4e0</color>
     <color name="textcolor3">#555555</color>
+    <color name="black">#000000</color>
+    <color name="shareBG">#CCC</color>
+    <color name="shareText">#126845</color>
 </resources>
