--- a/app/src/main/res/layout/item_news_original_text.xml
+++ b/app/src/main/res/layout/item_news_original_text.xml
@@ -20,7 +20,7 @@
             android:layout_marginBottom="1dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
-            android:src="@drawable/img_tempmy" />
+            android:src="@drawable/img_temp" />
 
         <TextView
             android:id="@+id/li_name"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:layout_toRightOf="@+id/li_head"
-            android:text="马云"
+            android:text="luern0313"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
@@ -39,8 +39,8 @@
             android:layout_alignStart="@+id/li_name"
             android:layout_below="@+id/li_name"
             android:layout_marginLeft="1dp"
-            android:layout_marginTop="3dp"
-            android:text="2分钟前"
+            android:layout_marginTop="2dp"
+            android:text="一天前"
             android:textSize="10sp" />
 
         <TextView
@@ -51,73 +51,13 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:text="这个人很有前途，明天来我公司上班" />
-
-        <RelativeLayout
-            android:id="@+id/li_share_lay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/li_text"
-            android:background="@color/shareBG"
-            android:padding="3dp">
-
-            <cn.luern0313.wristbilibili.widget.CircleImageView
-                android:id="@+id/il_share_head"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="2dp"
-                app:srcCompat="@drawable/img_temp" />
-
-            <TextView
-                android:id="@+id/il_share_up"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/il_share_head"
-                android:gravity="center_vertical"
-                android:text="luern0313的投稿"
-                android:textSize="12sp" />
-
-            <ImageView
-                android:id="@+id/il_share_img"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/il_share_head"
-                android:layout_margin="2dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/img_tail" />
-
-            <TextView
-                android:id="@+id/il_share_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/il_share_img"
-                android:layout_margin="4dp"
-                android:background="#55000000"
-                android:padding="1dp"
-                android:text="07:45  946.4万观看"
-                android:textColor="@color/textColor"
-                android:textSize="10sp" />
-
-            <TextView
-                android:id="@+id/il_share_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/il_share_img"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:text="教你怎么让支付宝的钱无限"
-                android:textSize="13sp" />
-
-
-        </RelativeLayout>
+            android:text="戳我上期视频，教你怎么让支付宝的钱无限" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/li_share_lay"
+            android:layout_below="@+id/li_text"
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
