--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,6 +32,17 @@
                 android:layout_marginTop="2dp"
                 android:src="@drawable/img_defaultavatar" />
 
+            <ProgressBar
+                android:id="@+id/menu_headlod"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
+                android:padding="8dp"
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/menu_username"
                 android:layout_width="wrap_content"
@@ -46,7 +58,7 @@
             <TextView
                 android:id="@+id/menu_userlv"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="13dp"
                 android:layout_below="@+id/menu_username"
                 android:layout_marginLeft="2dp"
                 android:layout_marginTop="10dp"
@@ -64,7 +76,7 @@
             <TextView
                 android:id="@+id/menu_usercoin"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="13dp"
                 android:layout_below="@+id/menu_username"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="9dp"
@@ -72,6 +84,7 @@
                 android:text="硬币 : 0"
                 android:textColor="@color/textColor2"
                 android:textSize="10sp" />
+
         </RelativeLayout>
 
         <LinearLayout
