优化个人信息加载，增加头像的缓存

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -119,12 +119,13 @@
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_below="@+id/menu_livelay"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="buttonDL"
             android:orientation="horizontal"
             android:paddingLeft="28dp"
-            android:paddingRight="28dp"
-            android:clickable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:paddingRight="28dp">
 
             <ImageView
                 android:layout_width="36dp"
