--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:paddingTop="10dp">
 
         <TextView
-            android:id="@+id/login_title_title"
+            android:id="@+id/main_title_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -23,11 +23,11 @@
             android:textColor="@color/textColor" />
 
         <ImageView
-            android:id="@+id/title_extraicon"
+            android:id="@+id/main_title_extraicon"
             android:layout_width="12dp"
             android:layout_height="19dp"
             android:layout_marginLeft="2dp"
-            android:layout_toRightOf="@id/login_title_title"
+            android:layout_toRightOf="@id/main_title_title"
             android:src="@drawable/icon_extra" />
     </RelativeLayout>
 
