点标题进入菜单

--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -13,6 +13,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="center_vertical"
+        android:onClick="buttonTitle"
         android:paddingBottom="4dp"
         android:paddingTop="10dp">
 
