--- a/app/src/main/res/layout/item_news_unknowtype.xml
+++ b/app/src/main/res/layout/item_news_unknowtype.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="2dp"
         android:paddingBottom="6dp">
 
-        <cn.luern0313.wristbilibili.widget.CircleImageView
+        <ImageView
             android:id="@+id/li_head"
             android:layout_width="36dp"
             android:layout_height="36dp"
@@ -22,6 +22,14 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
             android:src="@drawable/img_temp" />
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="1dp"
+            android:src="@drawable/mask_circle_white" />
 
         <TextView
             android:id="@+id/li_name"
