--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/mainColor">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/mainColor"
         android:paddingBottom="25dp"
         android:paddingTop="25dp">
 
@@ -20,10 +19,10 @@
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:onClick="buutonUser"
-            android:paddingLeft="28dp"
-            android:paddingRight="28dp">
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
 
-            <cn.luern0313.wristbilibili.widget.CircleImageView
+            <ImageView
                 android:id="@+id/menu_useric"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
@@ -31,6 +30,14 @@
                 android:layout_marginRight="2dp"
                 android:layout_marginTop="2dp"
                 android:src="@drawable/img_defaultavatar" />
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
+                android:src="@drawable/mask_circle_pink" />
 
             <ImageView
                 android:id="@+id/menu_uservip"
@@ -48,8 +55,6 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginTop="4dp"
                 android:layout_toRightOf="@+id/menu_useric"
-                android:allowUndo="false"
-                android:autoText="false"
                 android:text="你还没登录呢~"
                 android:textColor="@color/textColor" />
 
@@ -90,12 +95,13 @@
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_below="@+id/menu_userlay"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="28dp"
-            android:paddingRight="28dp"
+            android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:gravity="center_vertical"
+            android:onClick="buttonDynamic"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
 
             <ImageView
                 android:layout_width="36dp"
@@ -110,20 +116,50 @@
                 android:layout_height="wrap_content"
                 android:text="动态"
                 android:textColor="@color/textColor" />
+
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/menu_downlay"
+            android:id="@+id/menu_remindlay"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_below="@+id/menu_livelay"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="buttonRemind"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
+
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginRight="6dp"
+                android:background="@drawable/shape_menuiconbg"
+                android:padding="7dp"
+                android:src="@drawable/icon_menu_remind" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="提醒"
+                android:textColor="@color/textColor" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/menu_downlay"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_below="@+id/menu_remindlay"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:gravity="center_vertical"
             android:onClick="buttonDL"
             android:orientation="horizontal"
-            android:paddingLeft="28dp"
-            android:paddingRight="28dp">
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
 
             <ImageView
                 android:layout_width="36dp"
@@ -145,12 +181,13 @@
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_below="@+id/menu_downlay"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="28dp"
-            android:paddingRight="28dp"
+            android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:gravity="center_vertical"
+            android:onClick="buttonSearch"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
 
             <ImageView
                 android:layout_width="36dp"
@@ -172,12 +209,13 @@
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_below="@+id/menu_searchlay"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="28dp"
-            android:paddingRight="28dp"
+            android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:gravity="center_vertical"
+            android:onClick="buttonCollect"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
 
             <ImageView
                 android:layout_width="36dp"
@@ -191,19 +229,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="收藏"
-                android:textColor="@color/textColor"/>
+                android:textColor="@color/textColor" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_below="@+id/menu_collectlay"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="28dp"
-            android:paddingRight="28dp"
+            android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:gravity="center_vertical"
+            android:onClick="buttonSetting"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
 
             <ImageView
                 android:layout_width="36dp"
