--- a/app/src/main/res/layout/item_news_share_text.xml
+++ b/app/src/main/res/layout/item_news_share_text.xml
@@ -11,7 +11,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="2dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/li_head"
             android:layout_width="36dp"
             android:layout_height="36dp"
@@ -21,14 +21,6 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
             android:src="@drawable/img_tempmy" />
-
-        <ImageView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="1dp"
-            android:src="@drawable/mask_circle_white" />
 
         <TextView
             android:id="@+id/li_name"
@@ -69,18 +61,12 @@
             android:background="@color/shareBG"
             android:padding="4dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/il_share_head"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="2dp"
                 android:src="@drawable/img_temp" />
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="2dp"
-                android:src="@drawable/mask_circle_gray" />
 
             <TextView
                 android:id="@+id/il_share_up"
