--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,16 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="mainColor">#fa7298</color>
+
     <color name="textColor">#FFFFFF</color>
     <color name="textColor2">#fdd4e0</color>
     <color name="textcolor3">#555555</color>
+
     <color name="black">#000000</color>
-    <color name="shareBG">#DDD</color>
+
+    <color name="shareBG">#DADADA</color>
+    <color name="shareBGs">#BBB</color>
+
     <color name="shareText">#126845</color>
 
     <color name="activityBG">#fafafa</color>
