--- a/app/src/main/res/layout/item_news_original_video.xml
+++ b/app/src/main/res/layout/item_news_original_video.xml
@@ -15,7 +15,7 @@
         android:paddingTop="2dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/li_head"
+            android:id="@+id/liov_head"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentStart="true"
@@ -23,63 +23,54 @@
             android:layout_marginBottom="1dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
-            android:src="@drawable/img_temp" />
+            android:src="@drawable/img_default_head" />
 
         <TextView
-            android:id="@+id/li_name"
+            android:id="@+id/liov_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:layout_toRightOf="@+id/li_head"
+            android:layout_toRightOf="@+id/liov_head"
             android:text="luern0313"
             android:textColor="@color/black"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/li_updown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_toRightOf="@+id/li_name"
             android:ellipsize="end"
-            android:maxLines="1"
-            android:text="投稿了视频" />
+            android:maxLines="1"/>
 
         <TextView
-            android:id="@+id/li_time"
+            android:id="@+id/liov_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/li_name"
-            android:layout_below="@+id/li_name"
+            android:layout_alignStart="@+id/liov_name"
+            android:layout_below="@+id/liov_name"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="2dp"
             android:text="一天前"
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/li_text"
+            android:id="@+id/liov_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/li_head"
+            android:layout_below="@+id/liov_head"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:text="走过路过的看一看，教你怎么让支付宝的钱无限" />
 
         <ImageView
-            android:id="@+id/il_img"
+            android:id="@+id/liov_share_img"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/li_text"
+            android:layout_height="102dp"
+            android:layout_below="@+id/liov_text"
             android:layout_margin="2dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_tail" />
+            android:src="@drawable/img_default_vid" />
 
         <TextView
-            android:id="@+id/il_play"
+            android:id="@+id/liov_textimg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/il_img"
+            android:layout_alignBottom="@+id/liov_share_img"
             android:layout_margin="4dp"
             android:background="#55000000"
             android:padding="1dp"
@@ -88,10 +79,10 @@
             android:textSize="11sp" />
 
         <TextView
-            android:id="@+id/il_title"
+            android:id="@+id/liov_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/il_img"
+            android:layout_below="@+id/liov_share_img"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
@@ -102,21 +93,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/il_title"
+            android:layout_below="@+id/liov_title"
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/liov_likebu"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="2dp"
                 android:src="@drawable/icon_like" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/liov_like"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
