--- a/app/src/main/res/layout/item_news_share_text.xml
+++ b/app/src/main/res/layout/item_news_share_text.xml
@@ -15,7 +15,7 @@
         android:paddingTop="2dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/li_head"
+            android:id="@+id/list_head"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentStart="true"
@@ -23,76 +23,90 @@
             android:layout_marginBottom="1dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
-            android:src="@drawable/img_tempmy" />
+            android:src="@drawable/img_default_head" />
 
         <TextView
-            android:id="@+id/li_name"
+            android:id="@+id/list_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:layout_toRightOf="@+id/li_head"
+            android:layout_toRightOf="@+id/list_head"
             android:text="马云"
             android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:ellipsize="end"
+            android:maxLines="1" />
 
         <TextView
-            android:id="@+id/li_time"
+            android:id="@+id/list_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/li_name"
-            android:layout_below="@+id/li_name"
+            android:layout_alignStart="@+id/list_name"
+            android:layout_below="@+id/list_name"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="2dp"
             android:text="2分钟前"
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/li_text"
+            android:id="@+id/list_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/li_head"
+            android:layout_below="@+id/list_head"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:text="看见没，这个人的确很有前途，明天来我公司上班" />
 
         <RelativeLayout
-            android:id="@+id/li_share_lay"
+            android:id="@+id/list_share_lay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/selector_share"
             android:clickable="true"
             android:descendantFocusability="blocksDescendants"
-            android:layout_below="@+id/li_text"
+            android:layout_below="@+id/list_text"
             android:padding="4dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/il_share_head"
+                android:id="@+id/list_share_head"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="2dp"
-                android:src="@drawable/img_temp" />
+                android:src="@drawable/img_default_head" />
 
             <TextView
-                android:id="@+id/il_share_up"
+                android:id="@+id/list_share_name"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
                 android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/il_share_head"
+                android:layout_toRightOf="@+id/list_share_head"
                 android:gravity="center_vertical"
                 android:text="luern0313"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/il_title"
+                android:id="@+id/list_share_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/il_share_up"
+                android:layout_below="@+id/list_share_name"
                 android:layout_marginBottom="2dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 android:text="戳我上期视频，教你怎么让支付宝的钱无限"
                 android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/list_share_textimg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/list_share_text"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:clickable="true"
+                android:text="查看共9张图片"
+                android:textColor="@color/colorPrimary" />
 
 
         </RelativeLayout>
@@ -101,21 +115,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/li_share_lay"
+            android:layout_below="@+id/list_share_lay"
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/list_likebu"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="2dp"
                 android:src="@drawable/icon_like" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/list_like"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
