--- a/app/src/main/res/layout/item_news_share_video.xml
+++ b/app/src/main/res/layout/item_news_share_video.xml
@@ -15,7 +15,7 @@
         android:paddingTop="2dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/li_head"
+            android:id="@+id/lisv_head"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentStart="true"
@@ -23,80 +23,82 @@
             android:layout_marginBottom="1dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
-            android:src="@drawable/img_tempmy" />
+            android:src="@drawable/img_default_head" />
 
         <TextView
-            android:id="@+id/li_name"
+            android:id="@+id/lisv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:layout_toRightOf="@+id/li_head"
+            android:layout_toRightOf="@+id/lisv_head"
             android:text="马云"
             android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:ellipsize="end"
+            android:maxLines="1" />
 
         <TextView
-            android:id="@+id/li_time"
+            android:id="@+id/lisv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/li_name"
-            android:layout_below="@+id/li_name"
+            android:layout_alignStart="@+id/lisv_name"
+            android:layout_below="@+id/lisv_name"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="2dp"
             android:text="2分钟前"
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/li_text"
+            android:id="@+id/lisv_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/li_head"
+            android:layout_below="@+id/lisv_head"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:text="这个人很有前途，明天来我公司上班" />
 
         <RelativeLayout
-            android:id="@+id/li_share_lay"
+            android:id="@+id/lisv_share_lay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/li_text"
+            android:layout_below="@+id/lisv_text"
             android:background="@drawable/selector_share"
             android:clickable="true"
             android:descendantFocusability="blocksDescendants"
             android:padding="4dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/il_share_head"
+                android:id="@+id/lisv_share_head"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="2dp"
-                android:src="@drawable/img_temp" />
+                android:src="@drawable/img_default_head" />
 
             <TextView
-                android:id="@+id/il_share_up"
+                android:id="@+id/lisv_share_name"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
                 android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/il_share_head"
+                android:layout_toRightOf="@+id/lisv_share_head"
                 android:gravity="center_vertical"
                 android:text="luern0313的投稿"
                 android:textSize="12sp" />
 
             <ImageView
-                android:id="@+id/il_img"
+                android:id="@+id/lisv_share_img"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/il_share_head"
+                android:layout_height="96dp"
+                android:layout_below="@+id/lisv_share_head"
                 android:layout_margin="2dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/img_tail" />
+                android:src="@drawable/img_default_vid" />
 
             <TextView
-                android:id="@+id/il_share_play"
+                android:id="@+id/lisv_share_imgtext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/il_img"
+                android:layout_alignBottom="@+id/lisv_share_img"
                 android:layout_margin="4dp"
                 android:background="#55000000"
                 android:padding="1dp"
@@ -105,10 +107,10 @@
                 android:textSize="11sp" />
 
             <TextView
-                android:id="@+id/il_title"
+                android:id="@+id/lisv_share_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/il_img"
+                android:layout_below="@+id/lisv_share_img"
                 android:layout_marginBottom="2dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
@@ -122,21 +124,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/li_share_lay"
+            android:layout_below="@+id/lisv_share_lay"
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/lisv_likebu"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="2dp"
                 android:src="@drawable/icon_like" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/lisv_like"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
