--- a/app/src/main/res/layout/item_news_original_video.xml
+++ b/app/src/main/res/layout/item_news_original_video.xml
@@ -23,6 +23,7 @@
             android:layout_marginBottom="1dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
+            android:clickable="true"
             android:src="@drawable/img_default_head" />
 
         <TextView
@@ -55,7 +56,8 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:text="走过路过的看一看，教你怎么让支付宝的钱无限" />
+            android:text="走过路过的看一看，教你怎么让支付宝的钱无限"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/liov_share_img"
@@ -72,8 +74,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/liov_share_img"
             android:layout_margin="4dp"
-            android:background="#55000000"
-            android:padding="1dp"
+            android:background="@drawable/shape_dynamicvideotext"
+            android:padding="2dp"
             android:text="07:45  946.4万观看"
             android:textColor="@color/textColor"
             android:textSize="11sp" />
@@ -97,6 +99,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
+            android:clickable="true"
             android:orientation="horizontal">
 
             <ImageView
