--- a/app/src/main/res/layout/item_news_share_text.xml
+++ b/app/src/main/res/layout/item_news_share_text.xml
@@ -23,6 +23,7 @@
             android:layout_marginBottom="1dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="1dp"
+            android:clickable="true"
             android:src="@drawable/img_default_head" />
 
         <TextView
@@ -68,28 +69,36 @@
             android:layout_below="@+id/list_text"
             android:padding="4dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/list_share_head"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="2dp"
-                android:src="@drawable/img_default_head" />
+            <LinearLayout
+                android:id="@+id/list_share_user"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/list_share_name"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/list_share_head"
-                android:gravity="center_vertical"
-                android:text="luern0313"
-                android:textSize="12sp" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/list_share_head"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/img_default_head" />
+
+                <TextView
+                    android:id="@+id/list_share_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="luern0313"
+                    android:textSize="13sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/list_share_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/list_share_name"
+                android:layout_below="@+id/list_share_user"
                 android:layout_marginBottom="2dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
@@ -119,6 +128,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
+            android:clickable="true"
             android:orientation="horizontal">
 
             <ImageView
