--- a/app/src/main/res/layout/item_news_share_video.xml
+++ b/app/src/main/res/layout/item_news_share_video.xml
@@ -68,28 +68,35 @@
             android:descendantFocusability="blocksDescendants"
             android:padding="4dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/lisv_share_head"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="2dp"
-                android:src="@drawable/img_default_head" />
+            <LinearLayout
+                android:id="@+id/lisv_share_user"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/lisv_share_name"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/lisv_share_head"
-                android:gravity="center_vertical"
-                android:text="luern0313的投稿"
-                android:textSize="12sp" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/lisv_share_head"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/img_default_head" />
+
+                <TextView
+                    android:id="@+id/lisv_share_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="luern0313的投稿"
+                    android:textSize="13sp" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/lisv_share_img"
                 android:layout_width="match_parent"
                 android:layout_height="96dp"
-                android:layout_below="@+id/lisv_share_head"
+                android:layout_below="@+id/lisv_share_user"
                 android:layout_margin="2dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_default_vid" />
@@ -100,8 +107,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/lisv_share_img"
                 android:layout_margin="4dp"
-                android:background="#55000000"
-                android:padding="1dp"
+                android:background="@drawable/shape_dynamicvideotext"
+                android:padding="2dp"
                 android:text="07:45  946.4万观看"
                 android:textColor="@color/textColor"
                 android:textSize="11sp" />
@@ -128,6 +135,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
+            android:clickable="true"
             android:orientation="horizontal">
 
             <ImageView
