--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="mainColor">#fa7298</color>
 
-    <color name="textColor">#FFFFFF</color>
+    <color name="textColor">#ffffff</color>
     <color name="textColor2">#fdd4e0</color>
     <color name="textcolor3">#555555</color>
 
