--- a/app/src/main/res/layout/item_news_original_text.xml
+++ b/app/src/main/res/layout/item_news_original_text.xml
@@ -49,7 +49,7 @@
             android:text="一天前"
             android:textSize="10sp" />
 
-        <TextView
+        <cn.carbs.android.expandabletextview.library.ExpandableTextView
             android:id="@+id/liot_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +57,8 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:text="戳我上期视频，教你怎么让支付宝的钱无限" />
+            app:etv_MaxLinesOnShrink="2"/>
+
 
         <TextView
             android:id="@+id/liot_textimg"
