--- a/app/src/main/res/layout/item_news_original_video.xml
+++ b/app/src/main/res/layout/item_news_original_video.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:expandableTextView="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -48,7 +49,7 @@
             android:text="一天前"
             android:textSize="10sp" />
 
-        <TextView
+        <cn.carbs.android.expandabletextview.library.ExpandableTextView
             android:id="@+id/liov_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,13 +57,13 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:text="走过路过的看一看，教你怎么让支付宝的钱无限"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:etv_MaxLinesOnShrink="3"/>
 
         <ImageView
             android:id="@+id/liov_share_img"
             android:layout_width="match_parent"
-            android:layout_height="102dp"
+            android:layout_height="106dp"
             android:layout_below="@+id/liov_text"
             android:layout_margin="2dp"
             android:scaleType="centerCrop"
