--- a/app/src/main/res/layout/item_news_share_video.xml
+++ b/app/src/main/res/layout/item_news_share_video.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:expandableTextView="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,11 +32,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:layout_toRightOf="@+id/lisv_head"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="马云"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:ellipsize="end"
-            android:maxLines="1" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/lisv_time"
@@ -48,7 +49,7 @@
             android:text="2分钟前"
             android:textSize="10sp" />
 
-        <TextView
+        <cn.carbs.android.expandabletextview.library.ExpandableTextView
             android:id="@+id/lisv_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,7 +57,8 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:text="这个人很有前途，明天来我公司上班" />
+            app:etv_MaxLinesOnShrink="3" />
+
 
         <RelativeLayout
             android:id="@+id/lisv_share_lay"
@@ -95,7 +97,7 @@
             <ImageView
                 android:id="@+id/lisv_share_img"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
+                android:layout_height="100dp"
                 android:layout_below="@+id/lisv_share_user"
                 android:layout_margin="2dp"
                 android:scaleType="centerCrop"
